[package]
name = "fluxvt"
version = "0.1.0"
edition = "2021"
description = "A lightweight terminal emulator built with GTK4"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-only"

[dependencies]
winit = { version = "0.30", features = ["rwh_06"] }
wgpu = "30.0"
glyphon = "0.12"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
vte = "0.13"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
